hphp/test/slow/shapes/idx_arr_type_error.php.expectf

Catchable fatal error: Argument 1 to HH\Shapes::idx() must be of type ?HH\darray, int given in %s/idx_arr_type_error.php on line 5
